--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,13 @@ a:active {
   color: inherit;
 }
 
+ul,
+li {
+  list-style: none;
+  padding: 0%;
+  margin: 0%;
+}
+
 .navbar {
   height: 50px;
   padding: 10px;
