--- a/src/index.css
+++ b/src/index.css
@@ -48,8 +48,8 @@ li {
   width: 100%;
 }
 
-.navbar__logo i {
-  font-size: 3rem;
+.navbar__logo .hero__logo {
+  width: 20px;
 }
 
 .navbar__recipes {
@@ -59,6 +59,55 @@ li {
 
 .navbar__hamburger :nth-child(2) {
   display: none;
+}
+
+.landing{
+  margin: 80px auto;
+}
+
+.hero{
+  height: calc(100vh - 80px);
+  width: 70%;
+  margin-inline: auto;
+}
+
+.hero
+
+.category__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+}
+
+.category__card {
+  display: flex;
+  margin: 1.5%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.category__image {
+  width: 100%;
+}
+
+.category__content {
+  width: 100%;
+  padding-inline: 20px;
+}
+
+.category__header {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.category__title {
+  font-size: 1.3rem;
 }
 
 .recipes {
