--- a/src/index.css
+++ b/src/index.css
@@ -87,6 +87,7 @@ span.image {
   flex-direction: column;
   transform: translateX(100%);
   overflow-y: auto;
+  transition: all 0.5s ease;
 }
 
 .menu.active {
