--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,22 @@ li {
   margin: 0%;
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgb(241, 241, 241, 0.2);
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(168, 168, 168);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(139, 139, 139);
+}
+
 .navbar {
   height: 50px;
   padding: 10px 32px;
@@ -271,6 +287,7 @@ span.image {
   top: 12.5%;
   left: 7.5%;
   overflow-y: auto;
+  border-radius: 10px;
 }
 
 .recipes__popup_image {
@@ -291,11 +308,29 @@ span.image {
   font-size: 1.3rem;
 }
 
+.recipes__popup_tags{
+  width: 90%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin: 0 auto 16px;
+}
+
+.recipes__popup_tagLi{
+  text-align: center;
+  font-size: 0.8rem;
+  min-width: 50px;
+  padding: 1px 6px;
+  background-color: var(--green);
+  border: 1px solid var(--dark-green);
+  border-radius: 10px;
+}
+
 .recipes__popup_instructs {
   padding: 8%;
-  max-height: 60vh;
+  max-height: 60%;
   overflow: auto;
-  background-color: rgb(245, 244, 244);
+  background-color: var(--light-green);
 }
 
 .popup__instructs_line {
@@ -304,6 +339,115 @@ span.image {
   font-size: 0.9rem;
   line-height: 1.5rem;
 }
+
+.recipes__popup_video{
+  margin: 16px auto;
+  display: block;
+  text-align: center;
+}
+
+.recipes__popup_video a{
+  color: rgb(49, 80, 255);
+}
+
+div.recipes__popup_comments{
+  padding: 4%;
+  margin: 0 auto;
+}
+
+.recipes__popup_comment-count{
+  display: block;
+  text-align: center;
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+
+ul.recipes__popup_comments{
+  background-color: var(--light-green);
+  border: 1px solid var(--dark-green);
+  border-radius: 5px;
+  max-height: 216px;
+  overflow-y: auto;
+  margin: 20px 0;
+}
+
+.recipes__popup_comment:nth-child(even){
+  background-color: var(--green);
+}
+
+.recipes__popup_comment{
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  padding: 3px 8px;
+}
+
+.recipes__popup_comment-date{
+  grid-area: 1/2/2/3;
+  text-align: right;
+}
+
+.recipes__popup_comment-user{
+  grid-area: 1/1/2/2;
+}
+
+.recipes__popup_comment-content{
+  grid-area: 2/1/3/3;
+  padding: 3px 12px;
+}
+
+.recipes__popup_input-user{
+  width: 100%;
+  margin-top: 12px;
+  padding: 4px;
+  font-family: inherit;
+  outline: none;
+  border: 2px solid var(--green);
+  border-radius: 5px;
+
+}
+
+.recipes__popup_input-user:focus{
+  border: 2px solid var(--dark-green);
+}
+
+.recipes__popup_input-comment{
+  width: 100%;
+  margin: 12px 0;
+  padding: 4px;
+  font-family: inherit;
+  max-height: 200px;
+  min-height: 80px;
+  resize: vertical;
+  outline: none;
+  border: 2px solid var(--green);
+  border-radius: 5px;
+}
+
+.recipes__popup_input-comment:focus{
+  border: 2px solid var(--dark-green);
+}
+
+.recipes__popup_input-submit{
+  display: block;
+  width: auto;
+  padding: 6px 16px;
+  margin-inline: auto;
+  outline: none;
+  border: 2px solid var(--light-green);
+  border-radius: 5px;
+  color: var(--light-green);
+  background-color: black;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+
+.recipes__popup_input-submit:hover{
+  border: 2px solid var(--dark-green);
+  transform: scale(1.1);
+}
+
 
 footer {
   display: flex;
