--- a/src/index.css
+++ b/src/index.css
@@ -286,14 +286,15 @@ span.image {
 
 .recipes__popup {
   display: block;
-  width: 85%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
+  padding: 7.5% 10%;
   position: fixed;
   background-color: white;
   backdrop-filter: blur(2px);
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-  top: 12.5%;
-  left: 7.5%;
+  top: 0%;
+  left: 0%;
   overflow-y: auto;
   border-radius: 10px;
 }
@@ -601,6 +602,30 @@ footer {
 
   .recipes__comments:last-of-type {
     margin-top: auto;
+  }
+
+  .recipes__popup {
+    display: flex;
+    flex-direction: column;
+  }
+
+  div.recipes__popup_comments {
+    padding: 8px;
+    width: 80%;
+  }
+
+  .recipes__popup_image {
+    width: 50%;
+    align-self: center;
+  }
+
+  .recipes__popup_instructs {
+    min-height: 300px;
+    padding: 40px;
+  }
+  
+  .popup__instructs_line {
+    font-size: 1.1rem;
   }
 
   .mobile_visible {
