--- a/src/index.css
+++ b/src/index.css
@@ -132,6 +132,7 @@ span.image {
   padding: 12px;
   border-bottom: 1px solid black;
   color: white;
+  cursor: pointer;
 }
 
 .menu__item img {
@@ -187,6 +188,7 @@ span > i.menu-toggle.hidden {
 
 span > i.menu-toggle {
   display: block;
+  cursor: pointer;
 }
 
 .hero__title {
@@ -513,6 +515,7 @@ footer {
   .menu-toggle {
     color: white !important;
     font-size: 1.3rem !important;
+    cursor: pointer;
   }
 
   .menu__categories {
