Fix minor issues and build bundle

--- a/src/index.css
+++ b/src/index.css
@@ -327,6 +327,7 @@ span > i.menu-toggle {
   position: fixed;
   top: 0;
   right: 0;
+  cursor: pointer;
 }
 
 .recipes__popup_title {
@@ -392,6 +393,7 @@ ul.recipes__popup_comments {
   background-color: var(--light-green);
   border: 1px solid var(--dark-green);
   border-radius: 5px;
+  min-height: 72px;
   max-height: 216px;
   overflow-y: auto;
   margin: 20px 0;
